# zowe-explorer-vscode

./: .codecov.yml  .editorconfig  .eslintrc.js  .eslintrc.yaml  .gitignore  .npmrc  .prettierignore  .prettierrc.yaml  .sonarcloud.properties  .vscodeignore  .yarnrc  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  LICENSE_HEADER  OLD_webpack.config.js  README.md  ReadMe draft v1.md  ReadMe draft v2.md  TODO.txt  abc.txt  babel.config.json  eslint.config.mjs  gulpfile.js  lerna.json  log4jsconfig.json  package-lock.json  package.json  package.nls.fr.json  package.nls.json  package.nls.zh-cn.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  stringUpdateScript.js  test.tsconfig.json  theia_tests.Jenkinsfile  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  label-actions.yml  release.config.js
.husky/: commit-msg
__mocks__/: Session.ts  fs-extra.ts  fs.ts  isbinaryfile.ts  path.ts  vscode.ts
__tests__/: DatasetTree.test.ts  ProfileLoader.test.ts  USSTree.test.ts  ZoweNode.test.ts  ZoweUSSNode.test.ts  extension.2.test.ts  extension.test.ts  index.ts  zosjobs.test.ts  zosspool.test.ts
dco_signoffs/: Billie Simmons-vscode-extension-for-zowe.txt  Colin Stone-vscode-extension-for-zowe.txt  Vit Gottwald-vscode-extension-for-zowe.txt
dev/: Developer's ReadMe.md
docs/: ARCHITECTURE.md  Conformance-Guide-draft-table-format.md  Conformance-Guide-draft.md  DEVELOPER_README.md  README.md  (+10 more)
zedc/: CHANGELOG.md  Cargo.toml  README.md
zedc/.cargo/: config.toml
zedc/src/: cmd.rs  completions.rs  doctor.rs  main.rs  output.rs  status.rs  util.rs
zedc/src/code/: mod.rs  prepare.rs
zedc/src/pm/: cmd.rs  mod.rs
zedc/src/pr/: mod.rs
zedc/src/setup/: cmd.rs  mod.rs
zedc/src/test/: cmd.rs  coverage.rs  fs.rs  mod.rs
zedc/src/test/ghr/: mod.rs
zedc/src/test/local/: fs.rs  mod.rs
(+364 files in other folders)
