[package]
name = "zedc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
octocrab = "0.38.0"
owo-colors = "=4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
